<resources>
    <string name="app_name">Local Events</string>
    <string name="button_addEvent">Add Event</string>
    <string name="hint_eventTitle">Event Title</string>
    <string name="hint_eventDescription">Event Description</string>
    <string name="menu_addEvent">Add</string>
    <string name="menu_cancelEvent">Cancel</string>
    <string name="enter_event_details"> Please enter all details </string>
    <string name="save_event"> Save Event </string>
    <string name="button_deleteEvent">Delete Event</string>
    <string name="hint_eventDate">Event Date</string>
    <string name="hint_eventType">Event Type</string>
    <string name="eventType">A Type</string>
    <string name="hint_eventCapacity">Event Capacity</string>
    <string name="searchbar_hint">Search Events</string>
    <string name="capacityText">Capacity:</string>
    <string name="button_addImage"> Add Image </string>
    <string name="select_event_image">Select event image</string>
    <string name="change_event_image">Change event image</string>
    <string name="button_location">Set Location</string>
    <string name="menu_deleteEvent">Delete</string>
    <string name="title_activity_event_maps">Map of All Events</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>

    <string-array name="event_types">
        <item>Pop</item>
        <item>Rock</item>
        <item>Electronic</item>
        <item>Rap</item>
    </string-array>
    <string name="title_activity_map">MapActivity</string>
    <string name="a_location">A Location</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
</resources>