<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="24dp"
    app:cardElevation="8dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:elevation="24dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <ImageView
            android:id="@+id/imageIcon"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/change_event_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/eventTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:textSize="30sp"
            tools:text="A Title"
            tools:ignore="RelativeOverlap" />

        <TextView
            android:id="@+id/eventDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/eventTitle"
            tools:text="A Description" />

        <TextView
            android:id="@+id/eventDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/eventDescription"
            tools:text="A Date"
            android:textColor="@color/date"/>


        <Button
            android:id="@+id/btnDelete"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginTop="4dp"
            android:background="@color/colorAccent"
            android:padding="8dp"
            android:stateListAnimator="@null"
            android:text="@string/button_deleteEvent"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:layout_alignParentEnd="true"/>

        <TextView
            android:id="@+id/eventCapacity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnDelete"
            android:layout_alignParentEnd="true"
            tools:text="A Capacity"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/eventType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/eventDescription"
            android:layout_toEndOf="@id/eventDescription"
            android:layout_marginStart="8dp"
            android:text="@string/eventType"
            android:textSize="16sp"
            android:textStyle="italic"/>

    </RelativeLayout>
</androidx.cardview.widget.CardView>
